--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ main{
 
 .quiz-footer{
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     margin-top: 20px;
 }
 
@@ -68,7 +68,7 @@ main{
     
 }
 
-.btn.answer:hover{
+.btn:hover{
     background-color: teal;
     color: white;
     transform: scale(1.03);
@@ -89,3 +89,14 @@ main{
     transform: scale(1.03);
 }
 
+
+.quiz-ready{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quiz-ready .btn{
+    margin-top: 15px;
+}
