--- a/src/index.css
+++ b/src/index.css
@@ -119,3 +119,27 @@ main{
     gap: 20px;
     align-items: center;
 }
+
+.timer{
+    border: 1px solid teal;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: large;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: teal;
+    width: 100px;
+}
+
+.score{
+    background-color: teal;
+    color: white;
+    width: 150px;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
